--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,13 @@ keycloak.resource                   = authenticate-ms
 keycloak.credentials.secret         = eda89cd8-4505-450c-addb-cca278134d56
 keycloak.public-client				= true
 keycloak.enabled 					= true
-keycloak.bearer-only = true
-keycloak.ssl-required = external
+keycloak.bearer-only 				= true
+keycloak.ssl-required 				= external
 keycloak.use-resource-role-mappings = true
 
 
+# Serviço de autenticação do keycloak via API
+keycloack.authenticate.token.url = http://localhost:8080/auth/realms/demo-realm/protocol/openid-connect/token
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -20,3 +22,6 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/dbauthenticate
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+
+
