Authenticação, Refresh token, UserInfo e Inspect criados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ keycloak.use-resource-role-mappings = true
 
 
 # Serviço de autenticação do keycloak via API
-keycloack.authenticate.token.url = http://localhost:8080/auth/realms/demo-realm/protocol/openid-connect/token
+keycloack.url = http://localhost:8080/auth/realms/demo-realm/protocol/openid-connect
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
