Logout e user info funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8082
 
 keycloak.realm                      = demo-realm
 keycloak.auth-server-url            = http://localhost:8080/auth
-keycloak.resource                   = authenticate-ms
-keycloak.credentials.secret         = eda89cd8-4505-450c-addb-cca278134d56
+keycloak.resource                   = autenticacao-ms
+keycloak.credentials.secret         = 3d722c51-7b87-4cd7-a549-92b0cab31462
 keycloak.public-client				= true
 keycloak.enabled 					= true
 keycloak.bearer-only 				= true
